--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light container mt-3">
     <div class="container-fluid">
       <a class="navbar-brand w-50" href="#">
-        <img src="images/Logo, Icon/Logo.png" class="w-100" alt="">
+        <img src="Images/Logo, Icon/Logo.png" class="w-100" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
