--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Landing Page</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="CSS/bootstrap.min.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light container mt-3">
@@ -35,6 +35,6 @@
   </nav>
 
   
-  <script src="js/bootstrap.bundle.js"></script>
+  <script src="JS/bootstrap.bundle.js"></script>
 </body>
 </html>
